--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <li>PROJECTS</li>
                             <li>CONTACT</li>
                             <div id="mobileMenu">
-                                <img src="/Image/mobileMenu.png" alt="">
+                                <img src="Image/mobileMenu.png" alt="">
                             </div>
                         </ul>
                     </div>
@@ -96,10 +96,10 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quasi placeat dolorem molestias? Qui
                     et quidem vero, aut debitis voluptatum!</p>
                 <div id="SelectedWorkImages">
-                    <img src="/Image/work_1.jpg" alt="">
-                    <img src="/Image/work_2.jpg" alt="">
-                    <img src="/Image/work_3.jpg" alt="">
-                    <img src="/Image/work_4.jpg" alt="">
+                    <img src="Image/work_1.jpg" alt="">
+                    <img src="Image/work_2.jpg" alt="">
+                    <img src="Image/work_3.jpg" alt="">
+                    <img src="Image/work_4.jpg" alt="">
 
                 </div>
 
@@ -115,7 +115,7 @@
                 <div id="HappyClient">
                     <div class="HappyClientTextAndImg">
                         <div class="happyClientimgText">
-                            <img src="/Image/person_1.jpg" alt="">
+                            <img src="Image/person_1.jpg" alt="">
                             <div class="HappyClientText">
                                 <h4>John Smith</h4>
                                 <p>Customer Corp</p>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="HappyClientTextAndImg">
                         <div class="happyClientimgText">
-                            <img src="/Image/person_2.jpg" alt="">
+                            <img src="Image/person_2.jpg" alt="">
                             <div class="HappyClientText">
                                 <h4>John Smith</h4>
                                 <p>Customer Corp</p>
@@ -145,9 +145,9 @@
             <!-- about Us start  -->
             <section id="aboutUs">
 
-                <div class="aboutUs"> <img src="/Image/about_1.jpg" alt=""></div>
+                <div class="aboutUs"> <img src="Image/about_1.jpg" alt=""></div>
                 <div id="aboutUsimgAndText" class="aboutUs">
-                    <img src="/Image/about_2.jpg" alt="">
+                    <img src="Image/about_2.jpg" alt="">
                     <h5>About us</h5>
 
                     <h3>Creative We Grow</h3>
